<resources>
    <string name="app_name">Včelnice</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Nastavení</string>

    <string name="menu_home">Domu</string>
    <string name="menu_stanoviste">Stanoviště</string>
    <string name="menu_parovani">Párování</string>
    <string name="menu_nastaveni">Nastavení</string>
    <string name="menu_informace">O aplikaci</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="uprava">Upravit</string>
    <string name="smazat">Smazat</string>
    <string name="posledn_kontrola">Poslední kontrola:</string>
    <string name="nazev_stanovist">Název stanovistě</string>
    <string name="posledni_stav">Poslední stav:</string>
    <string name="poloha">Poloha:</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>